--- a/config.toml.sample
+++ b/config.toml.sample
@@ -1,40 +1,39 @@
 [HttpInput]
-url = "http://YOUR.INFLUX.HOST:8086/db/DATABASE/series?u=USERNAME&p=PASSWORD&q=select%20host%2C%20count(host)%20from%20error%20group%20by%20host%20fill(0)%20where%20time%20%3E%20now()%20-%205m"
-ticker_interval = 300
+url = "http://YOUR.INFLUX.HOST:8086/db/DATABASE/series?u=USERNAME&p=PASSWORD&q=select%20host%2C%20status%2C%20count(status)%20from%20request%20group%20by%20host%2C%20status%20where%20time%20%3E%20now()%20-%201m"
+ticker_interval = 60
 success_severity = 6
 error_severity = 1
-decoder = "KappaErrorsDecoder"
+decoder = "KappaStatusDecoder"
 
-[KappaErrorsDecoder]
+[KappaStatusDecoder]
 type = "SandboxDecoder"
 script_type = "lua"
-filename = "lua_decoders/kappa_errors.lua"
+filename = "lua_decoders/kappa_status.lua"
 
-	[KappaErrorsDecoder.config]
-	type = "KappaError"
+	[KappaStatusDecoder.config]
+	type = "KappaStatus"
 
-[PayloadEncoder]
-append_newlines = true
-
-[KappaAlertFilter]
-message_matcher = "Type == 'KappaError' && Fields[count] >= 10"
+[KappaAggregatorFilter]
 type = "SandboxFilter"
-filename = "lua_filters/kappa_alert.lua"
-ticker_interval = 30
+script_type = "lua"
+filename = "lua_filters/kappa_aggregate.lua"
+message_matcher = "Type == 'KappaStatus'"
+ticker_interval = 10
+
+  [KappaAggregatorFilter.config]
+  sec_per_row = 60
+  rows = 1440
+  anomaly_config = 'mww_nonparametric("4xx", 4, 15, 10, 0.6) mww_nonparametric("5xx", 5, 15, 10, 0.6)'
+
+[DashboardOutput]
+ticker_interval = 10
 
 [SlackEncoder]
 type = "SandboxEncoder"
 script_type = "lua"
 filename = "lua_encoders/slack.lua"
 
-[LogOutput]
-message_matcher = "Type == 'heka.sandbox-output' && Fields[payload_name] == 'KappaAlert'"
-encoder = "PayloadEncoder"
-
 [HttpOutput]
 address = "https://hooks.slack.com/services/YOUR/SLACK/WEBHOOK"
-message_matcher = "Type == 'heka.sandbox-output' && Fields[payload_name] == 'KappaAlert'"
+message_matcher = "(Type == 'heka.sandbox-output' && Fields[payload_type] == 'alert') || (Type == 'heka.httpinput.error' && Fields[previous_error] == FALSE)"
 encoder = "SlackEncoder"
-
-[DashboardOutput]
-ticker_interval = 300
